# sekai-deck-recommend-cpp

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build-npm.yml  build-sdist.yml  build-wheels.yml  release.yml
npm/haruki-sekai-deck-recommend-cpp/: README.md  index.d.ts  index.js  package.json
src/: sekai_deck_recommend.cpp  sekai_deck_recommend.pyi  sekai_deck_recommend_wasm.cpp
src/area-item-information/: area-item-service.cpp  area-item-service.h
src/area-item-recommend/: area-item-recommend.cpp  area-item-recommend.h
src/card-information/: card-calculator.cpp  card-calculator.h  card-detail-map.h  card-power-calculator.cpp  card-service.cpp  card-service.h  card-skill-calculator.cpp
src/common/: collection-utils.h  common-enums.h  enum-maps.h  music-meta.h  music-score.h
src/data-provider/: data-provider.cpp  master-data-types.h  master-data.cpp  master-data.h  music-metas.cpp  music-metas.h  user-data.cpp  user-data.h
src/deck-information/: deck-calculator.cpp  deck-calculator.h
src/deck-recommend/: base-deck-recommend.cpp  base-deck-recommend.h  deck-result-update.cpp  deck-result-update.h  event-deck-recommend.cpp  find-best-cards-dfs.cpp  find-best-cards-ga.cpp  find-best-cards-sa.cpp  find-target-bonus-cards-dfs.cpp  find-worldbloom-target-bonus-cards-dfs.cpp  mysekai-deck-recommend.cpp
src/event-point/: card-bloom-event-calculator.cpp  card-bloom-event-calculator.h  card-event-calculator.cpp  card-event-calculator.h  event-service.cpp  event-service.h
src/live-score/: live-calculator.cpp  live-exact-calculator.cpp  live-exact-calculator.h
src/master-data/: area-item-level.h  area-item.h  area.h  card-episode.h  card-mysekai-canvas-bonus.h  card-rarity.h  card.h  character-rank.h  event-card-bonus-limit.h  event-card.h  event-deck-bonus.h  event-exchange-summary.h  event-honor-bonus.h  event-item.h  event-mysekai-fixture-game-character-performance-bonus-limit.h  event-rarity-bonus-rate.h  event-skill-score-up-limit.h  event.h  game-character-unit.h  game-character.h  honor.h  ingame-combo.h  ingame-note.h  master-lesson.h  music-difficulty.h  music-vocal.h  music.h  mysekai-fixture-game-character-group-performance-bonus.h  mysekai-fixture-game-character-group.h  mysekai-gate-level.h  mysekai-gate.h  shop-item.h  skill.h  world-bloom-different-attribute-bonus.h  world-bloom-support-deck-bonus.h  world-bloom-support-deck-unit-event-limited-bonus.h  world-bloom.h
src/music-recommend/: music-recommend.cpp  music-recommend.h
src/mysekai-information/: mysekai-event-calculator.cpp
src/user-data/: user-area.h  user-card.h  user-character.h  (+8 more)
(+1 files in other folders)
